# AwardsBot

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
api/: manage.py
api/awards/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
api/awards/migrations/: 0001_initial.py  0002_remove_candidate_nominations_remove_candidate_user_and_more.py  0003_alter_candidate_username.py  0004_alter_candidate_username.py  0005_alter_candidate_username.py
api/bot_api/: asgi.py  settings.py  urls.py  wsgi.py
bot/: functions.py  keyboards.py  main.py  states.py  utils.py
bot/core/: api_service.py  models.py  text_manager.py
bot/handlers/: admin_handler.py  command_handler.py  main_handler.py
bot/resources/: buttons.yaml  commands.yaml  messages.yaml  texts.py
ops/: .env.example  Dockerfile  api.Dockerfile  docker-compose.yaml
